k8s-deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  namespace: slurm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exporter-apps-versions
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: exporter-apps-versions
    spec:
      containers:
        - name: exporter-apps-versions
          image: base.sw.sbc.space/pid/pid_registry/exporter-apps-versions/exporter-apps-versions:0.0.9
          ports:
            - containerPort: 5002
      volumes:
        - name: config
          configMap:
            name: my-configmap
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: exporter-apps-versions-service
  namespace: slurm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 5002
  selector:
    app: exporter-apps-versions

---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: exporter-apps-versions-ingress
  namespace: slurm
spec:
  defaultBackend:
    service:
      name: my-service
      port:
        number: 8080
  rules:
  - host: avorrtest.ru
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: exporter-apps-versions-service
            port:
              number: 8080
...
