k8s-deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: exporter-apps-versions-ingress
#  namespace: slurm
spec:
  defaultBackend:
    service:
      name: my-service
      port:
        number: 8080
  rules:
  - host: avorrtest.ru
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: exporter-apps-versions-service
            port:
              number: 8080
...
